# Agentic-Precision-Agriculture-Platform-Hybrid-ML-GenAI

./: LICENSE  README.md  ag_agents.py  app.py  main.py  pyproject.toml
Data/Image dataset/: README.md
models/: RandomForest.pkl
models/model_trainings/: train_resnet.py  train_rf.py
templates/: agent-form.html  agent-result.html  crop-result.html  crop.html  disease-result.html  disease.html  fertilizer-result.html  fertilizer.html  index.html  layout.html  try_again.html
utils/: fertilizer.py  model.py
