[project]
name = "yieldboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "groq>=1.4.0",
    "gunicorn>=20.0.4",
    "markdown>=3.10.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.0",
]
